Try minimizing workload